@@ -192,12 +192,11 @@ private:
     void resetCursor();
 
     void scheduleRelayout();
-#if APPLE_CHANGES
     void unscheduleRelayout();
-#endif
 
     void scheduleRepaint(int x, int y, int w, int h);
-
+    void unscheduleRepaint();
+    
     /**
      * Paints the HTML document to a QPainter.
      * The document will be scaled to match the width of
