@@ -1,3 +1,15 @@
+2002-11-17  David Hyatt  <hyatt@apple.com>
+
+	Make immediate repainting of the root element more robust.
+	
+        * khtml/html/html_documentimpl.cpp:
+        (HTMLDocumentImpl::close):
+        * khtml/khtmlview.cpp:
+        (KHTMLView::unscheduleRepaint):
+        * khtml/khtmlview.h:
+        * khtml/rendering/render_root.cpp:
+        (RenderRoot::repaint):
+
 2002-11-17  Darin Adler  <darin@apple.com>
 
 	- moved all NSURL and CFURL use out of WebCore
